--- a/Opdracht017a/index.html
+++ b/Opdracht017a/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Opdracht017a</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="styling/styles.css" />
   </head>
 
   <body>
@@ -16,7 +16,7 @@
             </p>
         </main>
         <footer class="testimonial--bottom">
-          <img class="testimonial--bottom__foto" width="100px" height="100px" src= "Toucan.jpg" alt="Pasfoto"/>
+          <img class="testimonial--bottom__foto" width="100px" height="100px" src= "Afbeeldingen/Toucan.jpg" alt="Pasfoto"/>
             <p class="testimonial--bottom__naam">Jeroen Heijdra-Speelman</p>
             <a class="testimonial--bottom__link" href="" target="_blank">examplewebsite.eu</a>
         </footer>
